       Mitsubishi CP-D70DW
       Mitsubishi CP-D707DW

     - Device IDs added for the following DNP printers:
       DNP DS40
       DNP DS80

  6) Added Catalan and Turkish translations.

  7) Added a unified CUPS backend to support selected printers

     A new CUPS backend was added to support USB printers that require a
     special communications protocol. The backend is called 
     'gutenprint52+usb' and requires libusbx in order to build.  

     The following dye-sublimation printers require this backend in order
     to function properly:

        Canon SELPHY ES series  (All models)
	Canon SELPHY CP series  (All models)
	Kodak Professional 1400
	Kodak 805 Photo Printer
   	Kodak 6800 Photo Printer
   	Kodak 6850 Photo Printer
	Kodak 605 Photo Printer
   	Shinko/Sinfonia CHC-S2145 
   	Sony UP-DR150

     Over time, it is expected that additional printer models will be
     supported by this unified backend.

* Changes from 5.2.8

  1) This release fixes an inappropriate change to the internal
     library version number (.soname or equivalent) made in 5.2.8.
     All distributors should immediately apply this update to their
     distributions to avoid other software linking against
     libgutenprint breaking.

  2) Duplicate Transparency entries in the media types for Canon
     iP4100 and similar printers have been removed.

  3) The range of fine position adjustment of CD media has been
     increased for Epson printers.

  4) The German translation has been updated.

  5) Canon PIXMA Pro9000 plain media high quality mode bug fix.

* Changes from 5.2.7

  1) The Canon driver has been significantly overhauled for this
     release, and output (and in some cases functionality) may be
     significantly different from previous releases.  We expect to
     perform further work in future releases.  Specific changes
     include:

     * All known combinations of offered modes now work in CUPS.